--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_SERVER_BASE_URL=http://localhost:5000
+REACT_APP_SERVER_BASE_URL=https://online-course-server-ten.vercel.app
 REACT_APP_FIREBASE_API_KEY=AIzaSyAYI50M-DxBwktgftoGtocdnFtSkRN3Ylc
 REACT_APP_FIREBASE_AUTH_DOMAIN=online-course2.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=online-course2
